# imf_2025

./: .gitignore  README.md  beamer_preamble.tex  main.py  pyproject.toml
thursday/afternoon/: continuous_state_mccall.ipynb  td_exercise.ipynb  td_learning.ipynb
thursday/afternoon/slidev/: slides.md
thursday/morning/dl_slides/: anns.tex
thursday/morning/source/: extended_jax_nn.md  extended_jax_nn.py  jax_nn.md  jax_nn.py
tuesday/morning/claude_exercise/: BENCHMARK_RESULTS.md  PERFORMANCE.md  README.md  analyze_c_optimizations.py  benchmark.sh  benchmark_c  benchmark_c.c  benchmark_c_optimizations.sh  benchmark_compute_only.sh  benchmark_fortran  benchmark_fortran.f90  benchmark_fortran_optimizations.sh  benchmark_python.py  benchmark_python_numba.py  benchmark_summary.py  data_figure1.csv  data_figure1_fortran.csv  data_figure2.csv  data_figure2_fortran.csv  data_figure3.csv  data_figure3_fortran.csv  ex.tex  figure1.c  figure1.f90  figure2.c  figure2.f90  figure3.c  figure3.f90  figure3.py  figure3_numba.py  figure3_numba_bench.py  final_comparison_with_numba.py  final_optimized_comparison.py  generate_data  generate_data.c  generate_data.f90  generate_data_fortran  plot_figure1.py  plot_figure2.py  plot_figure3.py  (+12 more)
tuesday/morning/intro_slides/: Makefile  beamer_preamble.tex  bio.txt  conspol.py  (+12 more)
wednesday/afternoon/: aiyagari_jax.ipynb  bayesian_stats.ipynb  intro_to_gps.ipynb  intro_to_kernels.ipynb  toy_gp_notebook.ipynb
wednesday/morning/: ais_fetcher.py  data_practice_1.ipynb  data_practice_1_solutions.ipynb  data_slides.md  pandas.ipynb  polars.ipynb
(+5 files in other folders)
