[project]
name = "imf-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "dm-tree>=0.1.9",
    "fastparquet>=2024.11.0",
    "folium>=0.20.0",
    "geodatasets>=2024.8.0",
    "geopandas>=1.1.1",
    "gpjax>=0.13.4",
    "jax>=0.8.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "numpyro>=0.19.0",
    "optax>=0.2.6",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pyproj>=3.7.2",
    "quantecon>=0.10.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "watermark>=2.5.0",
    "zstandard>=0.25.0",
]
